Use valueOf()
- Remove redundant parentheses
- Use final
- Remove redundant comparison
- Use compact array declarations